--- a/projects/otp-verification/src/lib/otp-verification.component.html
+++ b/projects/otp-verification/src/lib/otp-verification.component.html
@@ -1,13 +1,13 @@
 <div class="angular-otp__wrap">
-  <form autocomplete="off" (ngSubmit)="returnOtp()" novalidate>
+  <form autocomplete="off" novalidate>
     <div class="angular-otp__input-div" #otp>
-      <input type="text" [angularOnlyNumber]="isAlphanumeric" #otpDigit1 autofocus
+      <input type="text" angularOnlyNumber [isAlphanumeric]="isAlphanumeric" #otpDigit1 autofocus
         (keydown)="nextDigit($event, otpDigit2, 0, otpDigit1)" name="digit1" placeholder="-" maxlength="1">
-      <input type="text" [angularOnlyNumber]="isAlphanumeric" #otpDigit2
+      <input type="text" angularOnlyNumber [isAlphanumeric]="isAlphanumeric" #otpDigit2
         (keydown)="nextDigit($event, otpDigit3, otpDigit1, otpDigit2)" name="digit2" placeholder="-" maxlength="1">
-      <input type="text" [angularOnlyNumber]="isAlphanumeric" #otpDigit3
+      <input type="text" angularOnlyNumber [isAlphanumeric]="isAlphanumeric" #otpDigit3
         (keydown)="nextDigit($event, otpDigit4, otpDigit2, otpDigit3)" name="digit3" placeholder="-" maxlength="1">
-      <input type="text" [angularOnlyNumber]="isAlphanumeric" #otpDigit4
+      <input type="text" angularOnlyNumber [isAlphanumeric]="isAlphanumeric" #otpDigit4
         (keydown)="nextDigit($event, 0, otpDigit3, otpDigit4)" name="digit4" placeholder="-" maxlength="1">
     </div>
   </form>
